# sass-analytics-dashboard

./: .gitignore
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d934cd4e1c7_add_patment_details_to_user_model.py  8ab32d0709bc_initial_schema.py  a282811d948b_create_event_table.py
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  auth.py  billing.py  event.py  project.py  reports.py  websockets.py
backend/app/core/: __init__.py  celery.py  config.py  database.py  dependencies.py  hashing.py  jwt.py  seeding.py  websocket.py
backend/app/models/: __init__.py  event.py  project.py  user.py
backend/app/schemas/: __init__.py  event.py  project.py  user.py
backend/app/services/: __init__.py  auth.py
backend/app/tasks/: generate_report.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/billing/: page.tsx
frontend/src/app/dashboard/billing/success/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AnalyticsChart.tsx  AppHeader.tsx  AppSidebar.tsx  CreateProjectModal.tsx  Loginform.tsx  RegistrationForm.tsx  ReportGenratorButton.tsx  TrafficSimulator.tsx
frontend/src/hooks/: useAnalytics.ts  useLogin.ts  useLogout.ts  useRegister.ts  useReports.ts  useTrafficSimulator.ts  useUser.ts  useWebsocket.ts
frontend/src/lib/: api.ts
